--- a/GE.WebUI/less/humor.less
+++ b/GE.WebUI/less/humor.less
@@ -7,9 +7,18 @@
     margin: @def-pad*2 0;
 }
 
-.humor-list {
+.humor-list .inter-videos{
+    margin-top:-@def-pad*3;
+    margin-bottom:@def-pad*3;
+}
+
+.humor-list-item {
     font-size: 15px;
     margin-bottom: @def-pad*6;
+}
+
+.humor-list-item:last-child{
+    margin-bottom:0;
 }
 
 .humor-list__header {
