--- a/GE.WebUI/Views/SiteQuestions/Edit.cshtml
+++ b/GE.WebUI/Views/SiteQuestions/Edit.cshtml
@@ -1,64 +1,72 @@
-﻿@model SxVMSiteQuestion
+﻿@using SX.WebCore.MvcApplication
+@model SxVMSiteQuestion
 @{
     var title = "Форма обратной связи";
     ViewBag.Title = title;
     ViewBag.H1 = ViewBag.H1 ?? title;
     ViewBag.H1CssClass = "hidden";
     ViewBag.Description = ViewBag.Description ?? "На данной страницы Вы можете задать любые вопросы, сделать предложения по сайту или предъявить претензию владельцам ресурса";
-    ViewBag.Keywords = ViewBag.Keywords ?? string.Format("{0}, вопросы, предложения, претензии", SiteSettingsProvider[SX.WebCore.Resources.Settings.sitename]?.Value);
-    var message = TempData["Message"];
+    ViewBag.Keywords = ViewBag.Keywords ?? $"{SxMvcApplication.DefaultSiteName}, вопросы, предложения, претензии";
+    var message = (SxVMResultMessage)ViewBag.Message;
 }
 
 @section head{
     <meta name="robots" content="noindex" />
 }
 
-<div class="sq-page">
-    <div class="wrapper">
-        <br />
-        <form method="post" action="@Url.Action("Edit","SiteQuetions")" class="transparent">
-            @Html.AntiForgeryToken()
-
-            <div class="form-group">
-                @Html.LabelFor(x => x.Text, new { @class = "control-label" })
-                @Html.EditorFor(x => x.Text, new { htmlAttributes = new { @class = "form-control", @placeholder = "Вы можете задать любые вопросы, сделать предложения по сайту или предъявить претензию владельцам ресурса" } })
-                @Html.ValidationMessageFor(x => x.Text)
-            </div>
-
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(x => x.UserName, new { @class = "control-label" })
-                        @Html.EditorFor(x => x.UserName, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите Ваше имя" } })
-                        @Html.ValidationMessageFor(x => x.UserName)
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        @Html.LabelFor(x => x.Email, new { @class = "control-label" })
-                        @Html.EditorFor(x => x.Email, new { htmlAttributes = new { @class = "form-control", @placeholder = "Введите Ваше Email" } })
-                        @Html.ValidationMessageFor(x => x.Email)
-                    </div>
-                </div>
-            </div>
-
-            <div class="form-group">
-                <p class="small text-muted"><i>* - Обязательно для заполнения</i></p>
-                <p><a href="#" class="small text-muted"><u><i>Правила отправки сообщений</i></u></a></p>
-            </div>
-
-            <div class="form-group">
-                <div class="text-center">
-                    <button class="btn btn-default btn-transparent white" type="submit">Отправить</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-
-@if(message!=null)
+@if (message == null)
 {
-    <p class="text-warning">@message</p>
+    <div class="sq-page">
+        <div class="wrapper">
+            <br/>
+            <form method="post" action="@Url.Action("Edit", "SiteQuestions")" class="transparent">
+                @Html.AntiForgeryToken()
+
+                <div class="form-group">
+                    @Html.LabelFor(x => x.Text, new {@class = "control-label"})
+                    @Html.EditorFor(x => x.Text, new {htmlAttributes = new {@class = "form-control", @placeholder = "Вы можете задать любые вопросы, сделать предложения по сайту или предъявить претензию владельцам ресурса"}})
+                    @Html.ValidationMessageFor(x => x.Text)
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            @Html.LabelFor(x => x.UserName, new {@class = "control-label"})
+                            @Html.EditorFor(x => x.UserName, new {htmlAttributes = new {@class = "form-control", @placeholder = "Введите Ваше имя"}})
+                            @Html.ValidationMessageFor(x => x.UserName)
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            @Html.LabelFor(x => x.Email, new {@class = "control-label"})
+                            @Html.EditorFor(x => x.Email, new {htmlAttributes = new {@class = "form-control", @placeholder = "Введите Ваше Email"}})
+                            @Html.ValidationMessageFor(x => x.Email)
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <p class="small text-muted"><i>* - Обязательно для заполнения</i>
+                    </p>
+                    <p><a href="#" class="small text-muted"><u><i>Правила отправки сообщений</i></u></a>
+                    </p>
+                </div>
+
+                <div class="form-group">
+                    <div class="text-center">
+                        <button class="btn btn-default btn-transparent white" type="submit">Отправить</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+}
+else
+{
+    <div class="alert alert-@(message.MessageType == SxVMResultMessage.ResultMessageType.Ok ? "success" : "danger")">
+        @message.Message
+    </div>
+    <a class="btn btn-default" href="@Url.Action("Edit", "SiteQuestions")">Повторить</a>
 }
 
 @section scripts{
