--- a/GE.WebUI/less/bootstrap-ext.less
+++ b/GE.WebUI/less/bootstrap-ext.less
@@ -83,3 +83,10 @@ a{
     border-radius:0;
     font-size:13px;
 }
+
+//modal
+.modal-content{
+    box-shadow: 3px 5px 15px rgba(255, 255, 255, 0.5);
+    background-color:rgba(0, 0, 0, 0.7);
+    color:@color-white;
+}
