--- a/GE.WebUI/less/test-list.less
+++ b/GE.WebUI/less/test-list.less
@@ -2,8 +2,10 @@
 @import (reference) "sizes.less";
 @import (reference) "../bower_components/bootstrap/less/variables.less";
 
-.test-list {
+.test-page{
     margin-top: @def-pad*2;
+}
+.test-list {
     color: @color-white;
 }
 
