--- a/GE.WebUI/Views/Home/Index.cshtml
+++ b/GE.WebUI/Views/Home/Index.cshtml
@@ -19,28 +19,35 @@
 }
 
 @*@Html.Action("LastMaterialsBlock", "Articles", new {
-    bh="Последние статьи"
-})*@
+        bh="Последние статьи"
+    })*@
 
 @*@Html.Action("LastGamesNewsBlock", "News", new { lnc= 5 })*@
 
 @*@Html.Action("NewsCategories", new { controller = "News", lnc = 5 })*@
 
 @*<div class="text-center all-news-btn">
-    <a href="@Url.Action("List", "News")" class="btn btn-default btn-transparent white">Все новости</a>
-</div>*@
+        <a href="@Url.Action("List", "News")" class="btn btn-default btn-transparent white">Все новости</a>
+    </div>*@
 
 @{
     @*banner = banners != null ? banners.SingleOrDefault(x => x.Place == SxBanner.BannerPlace.Intermediate) : null;
-    if (banner != null)
-    {
-        if (!(Equals(banner.Type, SxBanner.BannerType.Google) && Request.IsLocal) || Equals(banner.Type, SxBanner.BannerType.Html))
+        if (banner != null)
         {
-            <div style="margin-top:30px;">
-                @Html.SxBanner(banner, (b) => Url.Action("Picture", "Pictures", new { id = b.PictureId }), b => { return Url.Action("Click", "Banners", new { bannerId = b.Id }); })
-            </div>
-        }
-    }*@
+            if (!(Equals(banner.Type, SxBanner.BannerType.Google) && Request.IsLocal) || Equals(banner.Type, SxBanner.BannerType.Html))
+            {
+                <div style="margin-top:30px;">
+                    @Html.SxBanner(banner, (b) => Url.Action("Picture", "Pictures", new { id = b.PictureId }), b => { return Url.Action("Click", "Banners", new { bannerId = b.Id }); })
+                </div>
+            }
+        }*@
+}
+
+@section under_game_menu
+{
+    <div class="container">
+        @Html.Action("Featured", "MaterialCategories", new { amount = 4 })
+    </div>
 }
 
 <section>
