--- a/GE.WebUI/Views/MaterialCategories/_Featured.cshtml
+++ b/GE.WebUI/Views/MaterialCategories/_Featured.cshtml
@@ -2,30 +2,46 @@
 
 @if (Model.Any())
 {
-    var colCount = 2;
+    const int colCount = 2;
     var rowsCount = Math.Ceiling((double)Model.Length / colCount);
     VMMaterialCategory item = null;
 
     <div class="featured-mc">
-        @for (int i = 1; i <= rowsCount; i++)
+        @for (var i = 1; i <= rowsCount; i++)
         {
             var data = Model.Skip((i - 1) * colCount).Take(colCount).ToArray();
             <div class="row">
-                @for (int y = 0; y < colCount; y++)
+                @for (var y = 0; y < colCount; y++)
                 {
                     item = data.Length > y ? data[y] : null;
                     <div class="col-md-@(Math.Ceiling((double)12/colCount))">
                         @if (item != null)
                         {
                             <div class="featured-mc__item">
-                                <a href="@item.Url(Url)" class="featured-mc__link"></a>
-                                <img alt="@item.Title" src="@Url.Action("Picture", "Pictures", new { id = item.FrontPictureId })" class="featured-mc__img" />
+                                <a class="featured-mc__link" role="button" data-toggle="collapse" href="#mc-@item.Id-materials" aria-expanded="false" aria-controls="mc-@item.Id-materials"></a>
+                                <img alt="@item.Title" src="@Url.Action("Picture", "Pictures", new {id = item.FrontPictureId})" class="featured-mc__img" />
                                 <div class="featured-mc__content">
-                                    <h4 class="featured-mc__title">@item.Title</h4>
+                                    <h4 class="featured-mc__title">@item.Title <i class="fa fa-caret-down pull-right hidden-xs hidden-md"></i></h4>
                                     <div class="featured-mc__desc">
                                         @item.Description
+                                        <div>
+                                            <i class="fa fa-caret-down hidden-lg"></i>
+                                        </div>
                                     </div>
                                 </div>
+                                @if (item.Materials.Any())
+                                {
+                                    VMMaterial material;
+                                    <div class="featured-mc__materials collapse" id="mc-@item.Id-materials">
+                                        @for (var z = 0; z < item.Materials.Length; z++)
+                                        {
+                                            material = item.Materials[z];
+                                            <div>
+                                                <a href="@material.GetUrl(Url)">@material.Title</a>
+                                            </div>
+                                        }
+                                    </div>
+                                }
                             </div>
                         }
                     </div>
