--- a/GE.WebUI/Views/Humor/Add.cshtml
+++ b/GE.WebUI/Views/Humor/Add.cshtml
@@ -1,4 +1,4 @@
-﻿@model VMEditHumor
+﻿@model VMHumor
 @{
     ViewBag.Title = ViewBag.Title ?? "Добавить юмор";
     ViewBag.H1 = ViewBag.H1 ?? ViewBag.Title;
