--- a/GE.WebUI/Areas/Admin/Views/Humor/EditorTemplates/VMHumor.cshtml
+++ b/GE.WebUI/Areas/Admin/Views/Humor/EditorTemplates/VMHumor.cshtml
@@ -7,69 +7,81 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(x => x.Id)
     @Html.HiddenFor(x => x.UserId)
+    @Html.HiddenFor(x => x.ViewsCount)
+    @Html.HiddenFor(x => x.DateCreate)
+    @Html.HiddenFor(x => x.DateUpdate)
 
-    <div class="form-group">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="form-group">
-                    @Html.LabelFor(x => x.Title)
-                    @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(x => x.Title)
-                </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.Title, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Title, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.Title)
             </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    @Html.LabelFor(x => x.Show)
-                    @Html.EditorFor(x => x.Show, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(x => x.Show)
-                </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                @Html.LabelFor(x => x.Show, new { @class = "control-label" })
+                @Html.EditorFor(x => x.Show, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.Show)
             </div>
-            <div class="col-md-2">
-                <div class="form-group">
-                    @Html.LabelFor(x => x.IsTop)
-                    @Html.EditorFor(x => x.IsTop, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(x => x.IsTop)
-                </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                @Html.LabelFor(x => x.IsTop, new { @class = "control-label" })
+                @Html.EditorFor(x => x.IsTop, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.IsTop)
             </div>
-            <div class="col-md-2">
-                @Html.LabelFor(x => x.DateOfPublication)
-                @Html.EditorFor(x => x.DateOfPublication, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(x => x.DateOfPublication)
-            </div>
+        </div>
+        <div class="col-md-2">
+            @Html.LabelFor(x => x.DateOfPublication, new { @class = "control-label" })
+            @Html.EditorFor(x => x.DateOfPublication, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(x => x.DateOfPublication)
         </div>
     </div>
 
     @if (!isNew)
     {
-    <div class="form-group">
-        @Html.LabelFor(x => x.TitleUrl) <span class="text-info">(применяется для уникальной идентификации материала)</span>
-        @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
-        @Html.ValidationMessageFor(x => x.TitleUrl)
-    </div>
+        <div class="form-group">
+            @Html.LabelFor(x => x.TitleUrl, new { @class = "control-label" }) <span class="text-info">(применяется для уникальной идентификации материала)</span>
+            @Html.EditorFor(x => x.TitleUrl, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(x => x.TitleUrl)
+        </div>
     }
 
-    <div class="form-group">
-        @Html.LabelFor(x => x.UserName) <span class="text-info">(если есть)</span>
-        <input type="text" id="@Html.IdFor(x=>x.UserName)" name="@Html.NameFor(x=>x.UserName)" value="@Html.ValueFor(x=>x.UserName)" class="form-control" @(!User.IsInRole("architect")?"disabled":null) />
-        @Html.ValidationMessageFor(x => x.UserName)
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.SourceUrl, new { @class = "control-label" })
+                @Html.EditorFor(x => x.SourceUrl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(x => x.SourceUrl)
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="form-group">
+                @Html.LabelFor(x => x.UserName, new { @class = "control-label" }) <span class="text-info">(если есть)</span>
+                <input type="text" id="@Html.IdFor(x=>x.UserName)" name="@Html.NameFor(x=>x.UserName)" value="@Html.ValueFor(x=>x.UserName)" class="form-control" @(!User.IsInRole("architect") ? "disabled" : null) />
+                @Html.ValidationMessageFor(x => x.UserName)
+            </div>
+        </div>
     </div>
 
     <div class="form-group">
         <div class="row">
             <div class="col-md-5">
                 <div class="form-group">
-                    @Html.LabelFor(x => x.CategoryId)
+                    @Html.LabelFor(x => x.CategoryId, new { @class = "control-label" })
                     @Html.EditorFor(x => x.CategoryId, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(x => x.CategoryId)
                 </div>
             </div>
             <div class="col-md-5">
-                @Html.LabelFor(x => x.FrontPictureId)
+                @Html.LabelFor(x => x.FrontPictureId, new { @class = "control-label" })
                 @Html.EditorFor(x => x.FrontPictureId, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(x => x.FrontPictureId)
             </div>
             <div class="col-md-2">
-                @Html.LabelFor(x => x.ShowFrontPictureOnDetailPage)
+                @Html.LabelFor(x => x.ShowFrontPictureOnDetailPage, new { @class = "control-label" })
                 @Html.EditorFor(x => x.ShowFrontPictureOnDetailPage, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(x => x.ShowFrontPictureOnDetailPage)
             </div>
@@ -77,19 +89,19 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(x => x.Foreword)
+        @Html.LabelFor(x => x.Foreword, new { @class = "control-label" })
         @Html.EditorFor(x => x.Foreword, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(x => x.Foreword)
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(x => x.Html)
+        @Html.LabelFor(x => x.Html, new { @class = "control-label" })
         @Html.EditorFor(x => x.Html, new { htmlAttributes = new { @class = "form-control" } })
         @Html.ValidationMessageFor(x => x.Html)
     </div>
 
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">@(isNew?"Добавить":"Сохранить")</button>
+        <button type="submit" class="btn btn-primary">@(isNew ? "Добавить" : "Сохранить")</button>
         <a href="@Url.Action("Index")" class="btn btn-default">Назад</a>
     </div>
 </form>
