--- a/GE.WebUI/less/yt-videos.less
+++ b/GE.WebUI/less/yt-videos.less
@@ -2,6 +2,21 @@
 @import (reference) "colors.less";
 @import (reference) "../bower_components/bootstrap/less/variables.less";
 
+//yt-videos-list
+.yt-videos-list{
+    color:@color-white;
+    margin-top:@def-pad*2;
+}
+
+.yt-videos-list__item{
+    margin-bottom:@def-pad*3;
+}
+
+.yt-videos-list__info > h2{
+    font-size:15px;
+    margin-bottom:@def-pad;
+}
+
 //yt-archive
 #yt-archive ul{
     list-style:none;
